--- a/_drafts/2021-04-18-music-in-my-life-1980-1988.md
+++ b/_drafts/2021-04-18-music-in-my-life-1980-1988.md
@@ -15,7 +15,7 @@ Like most kids I spent my early years listening to the music my parents listened
 - The Righteous Brothers: "Unchained Melody"
 - The Beatles: _Sgt. Pepper's Lonely Hearts Club Band_
 - The Supremes: "Where Did Our Love Go"
-- Manfred Mann's Earth Band: "Blinded by the Light"
+- Bob Seger: _Hollywood Nights_
 - Leon Russell: _Will O' The Wisp_
 
 And many others I can still recall. I would return to my parents' music frequently in later years. In hindsight I feel like the music they grew up is far better than the music I grew up with, but of course I didn't feel that way at the time.
