--- a/_posts/2021-04-24-learning.md
+++ b/_posts/2021-04-24-learning.md
@@ -9,11 +9,12 @@ My work tends to go through cycles of intensive learning followed by applying wh
 
 * [the Shapes Constraint Language (SHACL)](https://www.w3.org/TR/shacl/) for RDF graphs
 * [data governance](https://en.wikipedia.org/wiki/Data_governance)
+* [sales engineering](https://en.wikipedia.org/wiki/Sales_engineering)
 * ["Out of the Tar Pit"](http://curtclifton.net/papers/MoseleyMarks06a.pdf) and functional software architectures
 * [functional effects](https://en.wikipedia.org/wiki/Effect_system) in Scala
 * experimenting with Scala 3
 * the [Clojure](https://en.wikipedia.org/wiki/Clojure) programming language
 
-I've also been catching up with the [HOPL IV proceedings](https://hopl4.sigplan.org/), starting with the papers on Clojure and JavaScript, which are fascinating.
+I've also been catching up with the [HOPL IV proceedings](https://hopl4.sigplan.org/), starting with the papers on Clojure and JavaScript, which are fascinating. After HOPL I plan to catch up on the Usenix conferences, especially HotOS.
 
 After the work day I've been learning about other things. My personal projects have shifted focus to digital exhibitions, and adapting [paradicms]]({% post_url 2020-08-23-paradicms %}) to support them. I'm excited by the possibilities of that.
