--- a/_posts/2021-04-24-muse-web.md
+++ b/_posts/2021-04-24-muse-web.md
@@ -19,5 +19,5 @@ On the other hand, it appears to me, as an interested outsider, that the GLAM te
 
 Those constraints limit the talent pool, which circulates between institutions. The best people gravitate toward the institutions with the most resources, such as the Getty and the Met. Institutions with fewer resources to dedicate to technology are left to the mercy of the vendors.
 
-It's unclear to me how much of this situation is inevitable, given the nature of the field (i.e., limited budgets), how much is due to inertia, and how much is intentional preservation of the status quo. I'd love to see more of the IT industry-academia-GLAM collaborations that happen in Europe. (The [Sampo projects]]({% post_url 2020-12-03-sampo-model %} in Finland and the [Europeana](https://www.europeana.eu/) umbrella project come to mind.) I assume that the reason the U.S. has so few of these collaborations ultimately stems from the way cultural heritage projects are funded here compared to how they're funded in the European Union.
+It's unclear to me how much of this situation is inevitable, given the nature of the field (i.e., limited budgets), how much is due to inertia, and how much is intentional preservation of the status quo. I'd love to see more of the IT industry-academia-GLAM collaborations that happen in Europe. (The [Sampo projects]]({% post_url 2020-12-03-sampo-model %}) in Finland and the [Europeana](https://www.europeana.eu/) umbrella project come to mind.) I assume that the reason the U.S. has so few of these collaborations ultimately stems from the way cultural heritage projects are funded here compared to how they're funded in the European Union.
 
