--- a/_posts/2021-04-24-muse-web.md
+++ b/_posts/2021-04-24-muse-web.md
@@ -17,7 +17,7 @@ It's encouraging to see museums embracing technology and approaches to technolog
 
 On the other hand, it appears to me, as an interested outsider, that the GLAM technology community in the United States continues to be a closed world. You see that in the affiliations attached to the MuseWeb proceedings. There seems to be a lingering notion that only people with a certain type of resume should be involved with technology in libraries and museums. In practice that means (1) working for a vendor and helping perpetuate the current system of lock-in or (2) getting an MLIS or a museum studies degree and making a career out of working for GLAMs ("Web Development Librarian"). People who take either path are committing to compete for a small number of jobs that don't pay very well relative to what the same people could earn by doing similar technology work in other industries.
 
-Those constraints limit the talent pool, which circulates between institutions. The best people gravitate toward the institutions with the most resources, such as the Getty and the Met. Institutions with fewer resources to dedicate to technology are left to the mercy of the vendors.
+Those conditions limit the talent pool, which circulates between institutions. The best people gravitate toward the institutions with the most resources, such as the Getty and the Met. Institutions with fewer resources to dedicate to technology are left to the mercy of the vendors.
 
 It's unclear to me how much of this situation is inevitable, given the nature of the field (i.e., limited budgets), how much is due to inertia, and how much is intentional preservation of the status quo. I'd love to see more of the IT industry-academia-GLAM collaborations that happen in Europe. (The [Sampo projects]]({% post_url 2020-12-03-sampo-model %}) in Finland and the [Europeana](https://www.europeana.eu/) umbrella project come to mind.) I assume that the reason the U.S. has so few of these collaborations ultimately stems from the way cultural heritage projects are funded here compared to how they're funded in the European Union.
 
