--- a/_posts/2021-06-05-stuff.md
+++ b/_posts/2021-06-05-stuff.md
@@ -5,8 +5,8 @@ date:   2021-06-05
 categories: reading
 ---
 
-I've lived in quite a few places in my life. Moving frequently for school, work, and other reasons has a way of dampening one's enthusiasm for "stuff" and the accumulation thereof. Having to haul all of your stuff, or give away what won't fit into two suitcases, makes you think more carefully about the material things that really matter to you.
+I've lived in quite a few places in my life. Moving frequently for school, work, and other reasons has a way of dampening one's enthusiasm for "stuff" and the accumulation thereof. Having to haul all of your stuff, or give away what you can't carry, makes you think more carefully about the material things that really matter to you.
 
 Now that I have a house and family I've learned to be more relaxed about this. Kids need and want a certain amount of stuff: toys, furniture, school accessories. I still try to be mindful of how much we are accumulating. We often give away things we don't need any more, so someone else can use them.
 
-Books have always been the exception to the rule. When I was a student and had to move, my two suitcases would have a few clothes and a lot of books. A house with books feels like a home. Being surrounded by them, and sharing them with my kids, gives me joy.
+Books have always been the exception to the rule. When I was a student and had to move, my two suitcases would have a few clothes and a lot of books. A house with books feels like a home. Being surrounded by them, and sharing them with my family, gives me joy.
