fix blockquote styling

--- a/_posts/2020-01-11-lucas.md
+++ b/_posts/2020-01-11-lucas.md
@@ -9,6 +9,6 @@ I've been reading _Easy Riders, Raging Bulls_, Peter Biskind's history of Hollyw
 
 There is a great quote about the creation of _Star Wars_:
 
-> "Lucas started writing the treatment for Star Wars in February 1972 .... He was reading extensively through the literature of fairy tale and myth, discovering Joseph Campbell. He pored over Carlos Castaneda, recast Castaneda's hero, a Mexican shaman named Don Juan, as Obi-Wan Kenobi, and his 'life force' into the Force."
+> Lucas started writing the treatment for Star Wars in February 1972 .... He was reading extensively through the literature of fairy tale and myth, discovering Joseph Campbell. He pored over Carlos Castaneda, recast Castaneda's hero, a Mexican shaman named Don Juan, as Obi-Wan Kenobi, and his 'life force' into the Force.
 
 I knew about Lucas and Joseph Campbell, but never thought about the connection with Castaneda.
