--- a/_posts/2020-03-28-the-blues.md
+++ b/_posts/2020-03-28-the-blues.md
@@ -5,6 +5,6 @@ date:   2020-03-28
 categories: reading
 ---
 
-> "The blues as such are synonymous with low spirits. Not only is its express purpose to make people feel good, which is to say in high spirits, but in the process of doing so it is actually expected to generate a disposition that is both elegantly playful and heroic in its nonchalance."
+> The blues as such are synonymous with low spirits. Not only is its express purpose to make people feel good, which is to say in high spirits, but in the process of doing so it is actually expected to generate a disposition that is both elegantly playful and heroic in its nonchalance.
     
 Albert Murray, _Stomping the Blues_. I read this quote in a book about [zydeco](https://en.wikipedia.org/wiki/Zydeco).
