--- a/_posts/2020-04-11-solon.md
+++ b/_posts/2020-04-11-solon.md
@@ -5,8 +5,8 @@ date:   2020-04-11
 categories: reading
 ---
 
-> "Chosen archon, or chief magistrate, in the 6th century B.C., at a time of economic distress and social unrest, Solon was asked to save the state and compose its differences. Harsh debt laws permitting creditors to seize lands pledged as security, or even the debtor himself for slave labor, had impoverished and angered the plebeians and created a rising mood of insurrection. Having neither participated in the oppressions by the rich nor supported the cause of the poor, Solon enjoyed the unusual distinction of being acceptable to both; by the rich, according to Plutarch, because he was a man of wealth and substance, and by the poor because he was honest. In the body of laws he proclaimed, Solon's concern was not partisanship, but justice, fair dealing between strong and weak, and stable government. He abolished enslavement for debt, freed the enslaved, extended suffrage to the plebeians, reformed the currency to encourage trade, regulated weights and measures, established legal codes governing inherited property, civil rights of citizens, penalties for crime and finally, taking no chances, exacted an oath from the Athenian Council to maintain his reforms for ten years."
+> Chosen archon, or chief magistrate, in the 6th century B.C., at a time of economic distress and social unrest, Solon was asked to save the state and compose its differences. Harsh debt laws permitting creditors to seize lands pledged as security, or even the debtor himself for slave labor, had impoverished and angered the plebeians and created a rising mood of insurrection. Having neither participated in the oppressions by the rich nor supported the cause of the poor, Solon enjoyed the unusual distinction of being acceptable to both; by the rich, according to Plutarch, because he was a man of wealth and substance, and by the poor because he was honest. In the body of laws he proclaimed, Solon's concern was not partisanship, but justice, fair dealing between strong and weak, and stable government. He abolished enslavement for debt, freed the enslaved, extended suffrage to the plebeians, reformed the currency to encourage trade, regulated weights and measures, established legal codes governing inherited property, civil rights of citizens, penalties for crime and finally, taking no chances, exacted an oath from the Athenian Council to maintain his reforms for ten years.
 
-> "Then he did an extraordinary thing, possibly unique among heads of state: purchasing a ship on the pretext of traveling to see the world, he sailed into voluntary exile for ten years. Fair and just as a statesman, Solon was no less wise as a man. He could have retained supreme control, enlarging his authority to that of tyrant, and was indeed reproached because he did not, but knowing that endless petitions and proposals to modify this or that law would only gain him ill-will if he did not comply, he determined to leave, in order to keep his laws intact because the Athenians could not repeal them without his sanction. His decision suggests that an absence of overriding personal ambition together with shrewd common sense are among the essential components of wisdom. In the notes of his life, writing of himself in the third person, Solon put it differently: 'Each day he grew older and learned something new.'"
+> Then he did an extraordinary thing, possibly unique among heads of state: purchasing a ship on the pretext of traveling to see the world, he sailed into voluntary exile for ten years. Fair and just as a statesman, Solon was no less wise as a man. He could have retained supreme control, enlarging his authority to that of tyrant, and was indeed reproached because he did not, but knowing that endless petitions and proposals to modify this or that law would only gain him ill-will if he did not comply, he determined to leave, in order to keep his laws intact because the Athenians could not repeal them without his sanction. His decision suggests that an absence of overriding personal ambition together with shrewd common sense are among the essential components of wisdom. In the notes of his life, writing of himself in the third person, Solon put it differently: 'Each day he grew older and learned something new.'
 
 (Barbara Tuchman, _The March of Folly_)
