--- a/_posts/2020-05-04-lee-west.md
+++ b/_posts/2020-05-04-lee-west.md
@@ -7,6 +7,6 @@ categories: experience
 
 This weekend my father told me to find [Lee West's obituary](https://www.tulsaworld.com/obituaries/localobituaries/hon-lee-r-west/article_24196a7e-902b-5f11-9272-039f2a5f6e1d.html) in the Tulsa paper. Lee was a friend of my grandfather M.E. Gordon from their field trial days. They are both in the Field Trial Hall of Fame in Grand Junction, Tennesee.
 
-> "from a dirt-floor cabin to dinners at the White House where he would arrive in his pickup truck with bird dog boxes in the bed"
+> from a dirt-floor cabin to dinners at the White House where he would arrive in his pickup truck with bird dog boxes in the bed
 
 That sounds about right.
