--- a/_posts/2020-08-29-hegel.md
+++ b/_posts/2020-08-29-hegel.md
@@ -11,4 +11,4 @@ This week the Guardian published a [review of several new Hegel biographies](htt
 >
 >...
 >
-> In times of conspiracy theories and filter bubbles, Hegel’s method of thinking – dialectics – can become a kind of intellectual self-help. Or as Jürgen Kaube summarises the philosopher’s central message in the third biography to be published this August: "Thinking is effective."
+> In times of conspiracy theories and filter bubbles, Hegel's method of thinking – dialectics – can become a kind of intellectual self-help. Or as Jürgen Kaube summarises the philosopher’s central message in the third biography to be published this August: "Thinking is effective."
