--- a/_posts/2020-09-17-patience.md
+++ b/_posts/2020-09-17-patience.md
@@ -5,6 +5,6 @@ date:   2020-09-17
 categories: reading
 ---
 
-> "Be patient with everyone, but above all, with yourself. I mean, do not be disheartened by your imperfections, but always rise up with fresh courage. I am glad you make a fresh beginning daily. There is no better means of attainment to the spiritual life than by continually beginning again, and never thinking that we have done enough. How are we to be patient in dealing with our neighbor's faults if we are impatient in dealing with our own. He who is fretted by his own failings will not correct them. All profitable correction comes from a calm and peaceful mind."
+> Be patient with everyone, but above all, with yourself. I mean, do not be disheartened by your imperfections, but always rise up with fresh courage. I am glad you make a fresh beginning daily. There is no better means of attainment to the spiritual life than by continually beginning again, and never thinking that we have done enough. How are we to be patient in dealing with our neighbor's faults if we are impatient in dealing with our own. He who is fretted by his own failings will not correct them. All profitable correction comes from a calm and peaceful mind.
 
 Saint Francis de Sales, quoted by Joseph Goldstein in _The Experience of Insight_
