--- a/_posts/2021-02-06-wcit.md
+++ b/_posts/2021-02-06-wcit.md
@@ -7,6 +7,6 @@ categories: reading
 
 The [Cambridge Ring](https://www.cst.cam.ac.uk/ring) graduate association recently set up an online forum for alumni of the Department of Computer Science and Technology. I've been following the posts, and saw one this week about the [Worshipful Company of Information Technologies (WCIT)](https://en.wikipedia.org/wiki/Worshipful_Company_of_Information_Technologists). That led me down a Wikipedia rabbit hole reading about livery companies and various prominent members of WCIT. It was the first I had heard about [Dame Stephanie Shirley](https://en.wikipedia.org/wiki/Steve_Shirley). She sounds amazing. From the Wikipedia article:
 
-> "Shirley was born as Vera Buchthal to Arnold Buchthal, a judge in Dortmund who was Jewish and who lost his post to the Nazi regime, and a non-Jewish Viennese mother. In July 1939 Shirley arrived, at the age of five together with her nine-year-old sister Renate, in Britain as a Kindertransport child refugee. ..."
+> Shirley was born as Vera Buchthal to Arnold Buchthal, a judge in Dortmund who was Jewish and who lost his post to the Nazi regime, and a non-Jewish Viennese mother. In July 1939 Shirley arrived, at the age of five together with her nine-year-old sister Renate, in Britain as a Kindertransport child refugee. ...
 >
-> "After marriage to a physicist, Derek Shirley, in 1962, Shirley founded, with a capital of £6, the software company Freelance Programmers. ... Having experienced sexism in her workplace, 'being fondled, being pushed against the wall', she wanted to create job opportunities for women with dependents, and predominantly employed women, with only three male programmers in the first 300 staff, until the Sex Discrimination Act 1975 made that practice illegal. She also adopted the name 'Steve' to help her in the male-dominated business world, given that company letters signed using her real name were not responded to."
+> After marriage to a physicist, Derek Shirley, in 1962, Shirley founded, with a capital of £6, the software company Freelance Programmers. ... Having experienced sexism in her workplace, 'being fondled, being pushed against the wall', she wanted to create job opportunities for women with dependents, and predominantly employed women, with only three male programmers in the first 300 staff, until the Sex Discrimination Act 1975 made that practice illegal. She also adopted the name 'Steve' to help her in the male-dominated business world, given that company letters signed using her real name were not responded to.
