--- a/_posts/2021-01-16-seshat.md
+++ b/_posts/2021-01-16-seshat.md
@@ -7,7 +7,7 @@ categories: work
 
 In 2011 Peter Turchin and his collaborators created [Seshat](http://seshatdatabank.info/), a "global history databank" that 
 
-> "systematically collects what is currently known about the social and political organization of human societies and how civilizations have evolved over time. This massive collection of historical information allows us and others to rigorously test different hypotheses about the rise and fall of large-scale societies across the globe and human history."
+> systematically collects what is currently known about the social and political organization of human societies and how civilizations have evolved over time. This massive collection of historical information allows us and others to rigorously test different hypotheses about the rise and fall of large-scale societies across the globe and human history.
 
 The project is named after [the ancient Egyptian goddess of wisdom, knowledge, and writing](https://en.wikipedia.org/wiki/Seshat).
 
@@ -17,15 +17,15 @@ The ideas are fascinating, although the implementation appears to suffer from th
 
 On the implementation side I'm particularly interested in the "Data Collection" section of the "Introduction" paper. Creating and curating data and metadata at the scale of the Seshat databank is expensive in terms of experts' time and effort. The paper describes a template-based approach to collecting data from primary and secondary sources:
 
-> "Prior to inputting data on a topic, we develop a conceptual scheme through Seshat workshops.
+> Prior to inputting data on a topic, we develop a conceptual scheme through Seshat workshops.
 The goal is to create a quantitative variable (e.g., polity population) or multiple proxy variables capturing
 various aspects of a more complex characteristic (e.g. well-being). Seshat research assistants (RAs) then
 code several test cases in consultation with experts, continually refining the variables. RAs are trained
-and supervised by teams of advanced (postdoctoral or professorial) social scientists and historians."
+and supervised by teams of advanced (postdoctoral or professorial) social scientists and historians.
 > 
 > ...
 > 
-> "Once a coding scheme is operationalized to test theories, data collection begins. First, RAs
+> Once a coding scheme is operationalized to test theories, data collection begins. First, RAs
 search the most up-to-date and relevant scholarship (with expert guidance and direct supervision by
 Seshat’s more senior researchers), sourcing both primary and secondary material, and enter preliminary
 data. Second, RAs compile lists of questions on values that cannot be coded unambiguously, or on which
@@ -33,4 +33,4 @@ information in the published sources is lacking, and seek help from the experts 
 ask experts to review the data to check coding decisions made by RAs and help us fill gaps. The coding
 process is never “complete,” as Seshat data are constantly checked by various stakeholders, and new
 relevant data may appear, or novel insights may alter the understanding of known documents and
-material."
+material.
