--- a/_posts/2021-06-16-humming.md
+++ b/_posts/2021-06-16-humming.md
@@ -9,6 +9,6 @@ Last week The Guardian published a [long excerpt](https://www.theguardian.com/sc
 
 My favorite part of the excerpt:
 
-> "The engineers who created the internet have always recognised that people and their rituals matter. Since it was founded in 1986, the Internet Engineering Task Force (IETF) has provided a place for people to meet and collectively design the architecture of the web. Its members wanted to make design decisions using 'rough consensus', since they believed the internet should be an egalitarian community where anybody could participate, without hierarchies or coercion. 'We reject: kings, presidents and voting. We believe in: rough consensus and running code' was, and still is, one of its key mantras."
+> The engineers who created the internet have always recognised that people and their rituals matter. Since it was founded in 1986, the Internet Engineering Task Force (IETF) has provided a place for people to meet and collectively design the architecture of the web. Its members wanted to make design decisions using 'rough consensus', since they believed the internet should be an egalitarian community where anybody could participate, without hierarchies or coercion. 'We reject: kings, presidents and voting. We believe in: rough consensus and running code' was, and still is, one of its key mantras.
 >
-> "To cultivate 'rough consensus', IETF members devised a distinctive ritual: humming. When they needed to make a crucial decision, the group asked everyone to hum to indicate 'yay' or 'nay' – and proceeded on the basis of which was loudest. The engineers considered this less divisive than voting."
+> To cultivate 'rough consensus', IETF members devised a distinctive ritual: humming. When they needed to make a crucial decision, the group asked everyone to hum to indicate 'yay' or 'nay' – and proceeded on the basis of which was loudest. The engineers considered this less divisive than voting.
