--- a/_posts/2021-07-17-bm25.md
+++ b/_posts/2021-07-17-bm25.md
@@ -7,4 +7,4 @@ categories: work
 
 I've been using [Lunr.js](https://lunrjs.com/) to implement browser-side freetext search for [Paradicms]({% post_url 2020-08-23-paradicms %}) statically-generated sites. I was curious how Lunr scores documents, and read that it uses the [BM25 algorithm](https://en.wikipedia.org/wiki/Okapi_BM25) developed by Stephen E. Robertson, [Karen Spärck Jones](https://en.wikipedia.org/wiki/Karen_Sp%C3%A4rck_Jones) and others in the 1970s and 1980s.
 
-I never met Professor Spärck Jones, though after I read of her passing in 2007 I realized I'd seen her in the halls of the Computer Laboratory several times. She had an impressive career, and had also been married to [Roger Needham](https://en.wikipedia.org/wiki/Roger_Needham), a former head of the department and the co-author of one of my favorite systems papers, ["On the duality of operating system structures"](https://dl.acm.org/doi/10.1145/850657.850658).
+I never met Professor Spärck Jones, but after she passed away in 2007 I realized I'd seen her in the halls of the Computer Laboratory several times. She had an impressive career, and had also been married to [Roger Needham](https://en.wikipedia.org/wiki/Roger_Needham), a former head of the department and the co-author of one of my favorite systems papers, ["On the duality of operating system structures"](https://dl.acm.org/doi/10.1145/850657.850658).
