--- a/_posts/2021-08-18-dvorak.md
+++ b/_posts/2021-08-18-dvorak.md
@@ -9,4 +9,4 @@ I learned to type before I had a computer at home. One summer when I was 9 or 10
 
 Around 2003 I switched from [QWERTY](https://en.wikipedia.org/wiki/QWERTY) to the [Dvorak keyboard layout](https://en.wikipedia.org/wiki/Dvorak_keyboard_layout). I honestly don't recall why -- I probably just wanted to try something new. I'd heard you could type faster with the Dvorak layout, and that you would have fewer repetitive strain injuries (RSI) from typing. Using the Dvorak layout didn't change my typing speed much either way, but I've had very few issues with RSI since I switched. The switch itself was physically painful -- "reprogramming" over a decade of muscle memory.
 
-I've never used an actual Dvorak keyboard. I use QWERTY-labeled keyboards, and change the layout in software. Not having accurately labeled keys made it tougher to learn the Dvorak layout initially -- especially the various mathematical symbols used in programming.
+I've never used an actual Dvorak keyboard. I use QWERTY-labeled keyboards made by Kinesis, and change the layout in software. Not having accurately labeled keys made it tougher to learn the Dvorak layout initially -- especially the various mathematical symbols used in programming.
