--- a/_posts/2021-04-24-learning.md
+++ b/_posts/2021-04-24-learning.md
@@ -17,4 +17,4 @@ My work tends to go through cycles of intensive learning followed by applying wh
 
 I've also been catching up with the [HOPL IV proceedings](https://hopl4.sigplan.org/), starting with the papers on Clojure and JavaScript, which are fascinating. After HOPL I plan to catch up on the Usenix conferences, especially HotOS.
 
-After the work day I've been learning about other things. My personal projects have shifted focus to digital exhibitions, and adapting [paradicms]]({% post_url 2020-08-23-paradicms %}) to support them. I'm excited by the possibilities of that.
+After the work day I've been learning about other things. My personal projects have shifted focus to digital exhibitions, and adapting [paradicms]({% post_url 2020-08-23-paradicms %}) to support them. I'm excited by the possibilities of that.
