fix some categories

--- a/_posts/2020-05-04-lee-west.md
+++ b/_posts/2020-05-04-lee-west.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Lee West"
 date:   2020-05-04
-categories: experience
+categories: experiences
 ---
 
 This weekend my father told me to find [Lee West's obituary](https://www.tulsaworld.com/obituaries/localobituaries/hon-lee-r-west/article_24196a7e-902b-5f11-9272-039f2a5f6e1d.html) in the Tulsa paper. Lee was a friend of my grandfather M.E. Gordon from their field trial days. They are both in the Field Trial Hall of Fame in Grand Junction, Tennesee.
