Computer Science -> computer science

--- a/_posts/2021-01-16-seshat.md
+++ b/_posts/2021-01-16-seshat.md
@@ -13,7 +13,7 @@ The project is named after [the ancient Egyptian goddess of wisdom, knowledge, a
 
 Turchin, et al. recently published a brief overview of the project, ["An Introduction to Seshat"](https://journal.equinoxpub.com/JCH/article/view/18508). The Seshat databank supports the study of [cliodynamics](https://en.wikipedia.org/wiki/Cliodynamics), a term coined by Turchin. Per Wikipedia, cliodynamics is a "transdisciplinary area of research that integrates cultural evolution, economic history/cliometrics, macrosociology, the mathematical modeling of historical processes during the longue durée, and the construction and analysis of historical databases."
 
-The ideas are fascinating, although the implementation appears to suffer from the usual maladies of digital humanities projects: a dearth of hands-on Computer Science and Information Technology labor, sustainability challenges and the boom-and-bust of grant funding, etc.
+The ideas are fascinating, although the implementation appears to suffer from the usual maladies of digital humanities projects: a dearth of hands-on computer science and information technology labor, sustainability challenges and the boom-and-bust of grant funding, etc.
 
 On the implementation side I'm particularly interested in the "Data Collection" section of the "Introduction" paper. Creating and curating data and metadata at the scale of the Seshat databank is expensive in terms of experts' time and effort. The paper describes a template-based approach to collecting data from primary and secondary sources:
 
