--- a/_posts/2022-06-23-flowers.md
+++ b/_posts/2022-06-23-flowers.md
@@ -11,6 +11,6 @@ I made a simple arrangement using a [bowl with a kenzan](2022-02-13-flower-scout
 
 The day was cloudy with light rain off and on -- one of my favorite kinds of weather. The light was perfect.
 
-<img src="/img/2022-06-23-flowers-1.jpg" alt="Flower arrangement" style="width: 960px;"/>
+<img src="/img/2022-06-23-flowers-1.jpg" alt="Flower arrangement" style="max-width: 50vw;"/>
 
-<img src="/img/2022-06-23-flowers-2.jpg" alt="Flower arrangement" style="width: 960px;"/>
+<img src="/img/2022-06-23-flowers-2.jpg" alt="Flower arrangement" style="max-width: 50vw;"/>
