--- a/_posts/2022-06-27-flowers.md
+++ b/_posts/2022-06-27-flowers.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Flowers"
 date:   2022-06-27
-categories: experiences
+categories: flowers
 ---
 
 A second set, four days later. It rained last night and continued into the morning. The light was perfect again, but I had to wait until the rain stopped to get the camera out. I've been reminded how tough it is to get a decent photo of an arrangement without artificial lighting and a backdrop. There's rarely an obvious focal point. Macroscopic would be easier, but I find that less interesting.
