--- a/_posts/2022-06-30-flowers.md
+++ b/_posts/2022-06-30-flowers.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Flowers"
 date:   2022-06-30
-categories: experiences
+categories: flowers
 ---
 
 It's the second week of the CSA. The central stem is a little overwhelming, but I couldn't leave it out. I tried to find some balance with the smaller flowers. My favorite part is the burst of budding flowers in the lower right corners of the photos.
