--- a/_posts/2022-07-07-flowers.md
+++ b/_posts/2022-07-07-flowers.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Flowers"
 date:   2022-07-07
-categories: experiences
+categories: flowers
 ---
 
 It's the third week of the CSA. The bouquet was overflowing this week. I struggled and failed to choose just a few for the kenzan bowl.
