--- a/_posts/2022-06-23-flowers.md
+++ b/_posts/2022-06-23-flowers.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Flowers"
 date:   2022-06-23
-categories: experiences
+categories: flowers
 ---
 
 [Flower Scout's](http://www.flower-scout.com/) CSA started today. I've been looking forward to it.
