--- a/_posts/2022-02-19-meteors.md
+++ b/_posts/2022-02-19-meteors.md
@@ -18,3 +18,9 @@ Joseph Priestley, _Philosophical Empiricism_
 > What am I myself but one of your meteors?
 
 Walt Whitman, _Leaves of Grass_
+
+<br/>
+
+> I would rather be a superb meteor, every atom of me in magnificent glow, than a sleepy and permanent planet. The proper function of a man is to live, not to exist.
+
+Jack London
