--- a/_posts/2022-09-15-flowers.md
+++ b/_posts/2022-09-15-flowers.md
@@ -5,7 +5,7 @@ date:   2022-09-15
 categories: flowers
 ---
 
-It's the thirteenth week of the CSA. I saved some flowers from last week to make an arrangement with shades of red, purple, and pink.
+It's the thirteenth week of the CSA. I saved some flowers from last week to make an arrangement with shades of red, purple, and pink. ("Your colors are pink and pink.")
 
 <img src="/img/2022-09-15-flowers-1.jpg" alt="Flower arrangement" style="max-height: 75vh; max-width: 50vw"/>
 
