add descriptions to blog posts

--- a/_posts/2020-06-20-ideas.md
+++ b/_posts/2020-06-20-ideas.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Ideas"
 date:   2020-06-20
-categories: work
+description: Buckminster Fuller and the importance of building prototypes
 ---
 
 Another passage from _Buckminster Fuller's Universe_ that resonated with me:
