--- a/_posts/2020-09-10-cidoc-crm.md
+++ b/_posts/2020-09-10-cidoc-crm.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "CIDOC CRM"
 date:   2020-09-10
-categories: work
+description: Exploring the CIDOC Conceptual Reference Model (CRM)
 ---
 
 I've been exploring the [CIDOC Conceptual Reference Model (CRM)](http://www.cidoc-crm.org/) with an eye toward using it in [Paradicms]({% post_url 2020-08-23-paradicms %}). The CRM is an abstract data model for cultural heritage information. It specifies the semantics of an entity class hierarchy and a hierarchy of properties that entities can have.
