--- a/_posts/2020-09-16-events.md
+++ b/_posts/2020-09-16-events.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Events"
 date:   2020-09-16
-categories: work
+description: Reflections on modeling historical events
 ---
 
 I've been thinking about the nature of historical events, and how to model them: space and time, agents and entities, facts versus interpretations. This problem is central to several projects I'm working on.
