--- a/_posts/2021-01-16-seshat.md
+++ b/_posts/2021-01-16-seshat.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Seshat"
 date:   2021-01-16
-categories: work
+description: Discovering the Seshat project and the study of cliodynamics
 ---
 
 In 2011 Peter Turchin and his collaborators created [Seshat](http://seshatdatabank.info/), a "global history databank" that 
