--- a/_posts/2021-04-24-learning.md
+++ b/_posts/2021-04-24-learning.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Learning"
 date:   2021-04-24
-categories: reading
+description: Things I've been learning about recently
 ---
 
 My work tends to go through cycles of intensive learning followed by applying what I've learned. I've been in the learning phase recently:
