--- a/_posts/2021-04-24-muse-web.md
+++ b/_posts/2021-04-24-muse-web.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "MuseWeb 2021"
 date:   2021-04-24
-categories: reading
+description: Interesting papers from the MuseWeb 2021 conference
 ---
 
 The [MuseWeb 2021](https://mw21.museweb.net/program/) conference was earlier this month. I've been catching up on the proceedings, and found a few interesting papers:
