--- a/_posts/2021-06-16-humming.md
+++ b/_posts/2021-06-16-humming.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Humming"
 date:   2021-06-16
-categories: reading
+description: 'Guardian excerpt from a new book, <i>Anthro-Vision: How Anthropology Can Explain Business and Life</i>'
 ---
 
 Last week The Guardian published a [long excerpt](https://www.theguardian.com/science/2021/jun/03/the-empty-office-what-we-lose-when-we-work-from-home) from a new book by Gillian Tett, _Anthro-Vision: How Anthropology Can Explain Business and Life_. I'll have to read it. Any book that can connect Xerox PARC, the IETF, and anthropology is pure catnip to me.
