--- a/_posts/2021-08-18-dvorak.md
+++ b/_posts/2021-08-18-dvorak.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Dvorak"
 date:   2021-08-18
-categories: experiences
+description: "How I got started with the Dvorak keyboard"
 ---
 
 I learned to type before I had a computer at home. One summer when I was 9 or 10 my mother sent me to a typing class. We used word processors to learn touch typing, starting with individual keys and then transcribing passages from paper. We were tested on accuracy as well as speed. It was extremely boring, but being able to touch-type complete sentences with very few typos has been an exceptionally useful skill. Back then very few computer programs had live spell-checking.
