--- a/_posts/2020-02-26-gabriel.md
+++ b/_posts/2020-02-26-gabriel.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Learning to Listen for Design"
 date:   2020-02-26
-categories: work
+description: Leading a discussion group on a paper from Onward! 2019, "Learning to Listen for Design" by Baniassad, et al.
 ---
 
 At work I led a discussion group on a paper from Onward! 2019, "Learning to Listen for Design" by Baniassad, et al. The abstract:
