--- a/_posts/2021-02-06-wcit.md
+++ b/_posts/2021-02-06-wcit.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "WCIT"
 date:   2021-02-06
-categories: reading
+description: Learning about Dame Stephanie Shirley and the Worshipful Company of Information Technologies
 ---
 
 The [Cambridge Ring](https://www.cst.cam.ac.uk/ring) graduate association recently set up an online forum for alumni of the Department of Computer Science and Technology. I've been following the posts, and saw one this week about the [Worshipful Company of Information Technologies (WCIT)](https://en.wikipedia.org/wiki/Worshipful_Company_of_Information_Technologists). That led me down a Wikipedia rabbit hole reading about livery companies and various prominent members of WCIT. It was the first I had heard about [Dame Stephanie Shirley](https://en.wikipedia.org/wiki/Steve_Shirley). She sounds amazing. From the Wikipedia article:
