--- a/_posts/2021-07-17-bm25.md
+++ b/_posts/2021-07-17-bm25.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "BM25"
 date:   2021-07-17
-categories: work
+description: "Karen Spärck Jones and the BM25 algorithm"
 ---
 
 I've been using [Lunr.js](https://lunrjs.com/) to implement browser-side freetext search for [Paradicms]({% post_url 2020-08-23-paradicms %}) statically-generated sites. I was curious how Lunr scores documents, and read that it uses the [BM25 algorithm](https://en.wikipedia.org/wiki/Okapi_BM25) developed by Stephen E. Robertson, [Karen Spärck Jones](https://en.wikipedia.org/wiki/Karen_Sp%C3%A4rck_Jones) and others in the 1970s and 1980s.
