--- a/_posts/2022-01-23-t-shaped.md
+++ b/_posts/2022-01-23-t-shaped.md
@@ -2,6 +2,7 @@
 layout: post
 title:  "T-shaped"
 date:   2022-01-23
+description: The concept of T-shaped skills
 ---
 
 > The concept of T-shaped skills, or T-shaped persons is a metaphor used in job recruitment to describe the abilities of persons in the workforce. The vertical bar on the letter T represents the depth of related skills and expertise in a single field, whereas the horizontal bar is the ability to collaborate across disciplines with experts in other areas and to apply knowledge in areas of expertise other than one's own.
