--- a/_posts/2022-04-18-tools.md
+++ b/_posts/2022-04-18-tools.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "Tools"
 date:   2022-04-18
-categories: reading
+description: Thoughts on tool-building
 ---
 
 "If you want to teach people a new way of thinking, don’t bother trying to teach them. Instead give them a tool, the use of which will lead to new ways of thinking." (Buckminster Fuller)
