tag most blog posts with categories

--- a/_posts/2020-02-26-gabriel.md
+++ b/_posts/2020-02-26-gabriel.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "Learning to Listen for Design"
+categories: [learning]
 date:   2020-02-26
 description: Leading a discussion group on a paper from Onward! 2019, "Learning to Listen for Design" by Baniassad, et al.
+layout: post
+title:  "Learning to Listen for Design"
 ---
 
 At work I led a discussion group on a paper from Onward! 2019, "Learning to Listen for Design" by Baniassad, et al. The abstract:
