--- a/_posts/2020-06-20-ideas.md
+++ b/_posts/2020-06-20-ideas.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "Ideas"
+categories: [learning]
 date:   2020-06-20
 description: Buckminster Fuller and the importance of building prototypes
+layout: post
+title:  "Ideas"
 ---
 
 Another passage from _Buckminster Fuller's Universe_ that resonated with me:
