--- a/_posts/2020-09-10-cidoc-crm.md
+++ b/_posts/2020-09-10-cidoc-crm.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "CIDOC CRM"
+categories: [projects]
 date:   2020-09-10
 description: Exploring the CIDOC Conceptual Reference Model (CRM)
+layout: post
+title:  "CIDOC CRM"
 ---
 
 I've been exploring the [CIDOC Conceptual Reference Model (CRM)](http://www.cidoc-crm.org/) with an eye toward using it in [Paradicms]({% post_url 2020-08-23-paradicms %}). The CRM is an abstract data model for cultural heritage information. It specifies the semantics of an entity class hierarchy and a hierarchy of properties that entities can have.
