--- a/_posts/2020-09-16-events.md
+++ b/_posts/2020-09-16-events.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "Events"
+categories: [projects]
 date:   2020-09-16
 description: Reflections on modeling historical events
+layout: post
+title:  "Events"
 ---
 
 I've been thinking about the nature of historical events, and how to model them: space and time, agents and entities, facts versus interpretations. This problem is central to several projects I'm working on.
