--- a/_posts/2021-01-16-seshat.md
+++ b/_posts/2021-01-16-seshat.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "Seshat"
+categories: [learning]
 date:   2021-01-16
 description: Discovering the Seshat project and the study of cliodynamics
+layout: post
+title:  "Seshat"
 ---
 
 In 2011 Peter Turchin and his collaborators created [Seshat](http://seshatdatabank.info/), a "global history databank" that 
