--- a/_posts/2021-04-24-learning.md
+++ b/_posts/2021-04-24-learning.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "Learning"
+categories: [learning]
 date:   2021-04-24
 description: Things I've been learning about recently
+layout: post
+title:  "Learning"
 ---
 
 My work tends to go through cycles of intensive learning followed by applying what I've learned. I've been in the learning phase recently:
