--- a/_posts/2022-03-29-long-now.md
+++ b/_posts/2022-03-29-long-now.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "Long Now"
+categories: [learning]
 date:   2022-03-29
 description: The Long Now Foundation and John Markoff's new biography of Stewart Brand
+layout: post
+title:  "Long Now"
 ---
 
 Since I finished [reading and watching the Turing lectures]({% post_url 2022-01-12-turing-lectures %}) I've been listening to the [Long Now Foundation's](https://en.wikipedia.org/wiki/Long_Now_Foundation) monthly [Seminars About Long-term Thinking](https://longnow.org/seminars/), hosted by [Stewart Brand](https://en.wikipedia.org/wiki/Stewart_Brand). I've followed the Long Now Foundation sporadically since it was established in 1996, and have shared [their collection of essays](https://longnow.org/essays/) with friends and colleagues many times over the years, but I wasn't aware of the seminars until recently.
