--- a/_posts/2022-04-18-tools.md
+++ b/_posts/2022-04-18-tools.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "Tools"
+categories: [learning]
 date:   2022-04-18
 description: Thoughts on tool-building
+layout: post
+title:  "Tools"
 ---
 
 "If you want to teach people a new way of thinking, don’t bother trying to teach them. Instead give them a tool, the use of which will lead to new ways of thinking." (Buckminster Fuller)
