--- a/_posts/2021-04-24-muse-web.md
+++ b/_posts/2021-04-24-muse-web.md
@@ -1,8 +1,9 @@
 ---
-layout: post
-title:  "MuseWeb 2021"
+categories: [learning]
 date:   2021-04-24
 description: Interesting papers from the MuseWeb 2021 conference
+layout: post
+title:  "MuseWeb 2021"
 ---
 
 The [MuseWeb 2021](https://mw21.museweb.net/program/) conference was earlier this month. I've been catching up on the proceedings, and found a few interesting papers:
