--- a/_drafts/2025-04-29-betrieb.md
+++ b/_drafts/2025-04-29-betrieb.md
@@ -9,6 +9,8 @@ title:  "Betrieb"
 Einstein biography passage
 
 It's easy to get caught up in the activity of solving problems and neglect to consider whether they're worth solving
+It's particularly easy for young people who don't have enough experience to distinguish what's worthwhile and what's not
+As you get older and your time is more limited you become more conscientious about wasting effort
 
 Artificial constraints. Can build a career on them.
 
@@ -18,3 +20,4 @@ Technical and organizational debt. Maybe better off finding some other organizat
 
 Reinvention. Can usually do 10-20% better on almost anything with the benefit of hindsight.
 
+Social pressure.
