--- a/_drafts/2025-04-29-betrieb.md
+++ b/_drafts/2025-04-29-betrieb.md
@@ -14,7 +14,9 @@ As you get older and your time is more limited you become more conscientious abo
 
 Artificial constraints. Can build a career on them.
 
-Bullshit jobs. Graeber. High effort + low impact is a feature (banks and other bureaucracies).
+Jobs that shouldn't exist. Bullshit jobs. Graeber. High effort + low impact is a feature (banks and other bureaucracies).
+
+Projects with no goals.
 
 Technical and organizational debt. Maybe better off finding some other organization than one that's committed to bad mistakes. Same principle applies to management -- managing squeaky wheels instead of doing creative work.
 
