--- a/_drafts/2025-04-29-betrieb.md
+++ b/_drafts/2025-04-29-betrieb.md
@@ -6,7 +6,9 @@ layout: post
 title:  "Betrieb"
 ---
 
-Einstein biography passage
+> They divided the subject on which they were working into unnumerable small parts and then let each part be handled by a student. The student's task under these circumstances was relatively easy, and was dealt with in great detail so as to create an impression of being important. In this way there arose what was known in Germany as the 'Betrieb' (mill), where to all outward appearances no distinction is made between worthwhile ideas and trivialities. Everything produced was a 'contribution to the literature,' which had to be cited by every other subsequent writer if he wanted to be 'scientific'. An agreeable feeling of activity surrounded both teacher and students. They became so engrossed in this activity and industry that the larger problem that the partial studies were supposed to elucidate was often forgotten. The production of dissertations and papers became an end in itself.
+
+(Philipp Frank, _Einstein: His Life and Times_)
 
 It's easy to get caught up in the activity of solving problems and neglect to consider whether they're worth solving
 It's particularly easy for young people who don't have enough experience to distinguish what's worthwhile and what's not
