--- a/_posts/2025-05-04-betrieb.md
+++ b/_posts/2025-05-04-betrieb.md
@@ -14,16 +14,18 @@ Like many people I started my career with a surplus of time and energy and poor 
 
 **Why does the problem exist?** I try to avoid [pseudo-work](https://en.wikipedia.org/wiki/Bullshit_job), [bikeshedding](https://en.wikipedia.org/wiki/Law_of_triviality), and other problems that arise from organizational dysfunction rather than client/customer/user needs.
 
-**Who would benefit from a new solution?** It's tempting to extrapolate from your own experience and assume other people share your perspective and priorities. They rarely do. It pays to do [user research](https://en.wikipedia.org/wiki/User_research).
+**Who would benefit from a new solution?** It's tempting to extrapolate from your own experience, but don't assume other people share your perspective and priorities.
 
-**How much do they need one?** People will complain about the status quo but very few of them are willing to try new things. The benefits of switching has to be well worth the effort for them.
-
-**Are the requirements for a [minimum viable solution](https://en.wikipedia.org/wiki/Minimum_viable_product) clear? And validated?** Beware of [scope creep](https://en.wikipedia.org/wiki/Scope_creep) and unvalidated requirements.
+**Are the requirements for a [minimum viable solution](https://en.wikipedia.org/wiki/Minimum_viable_product) clear? And validated?** Beware of [scope creep](https://en.wikipedia.org/wiki/Scope_creep) and unvalidated requirements. People can usually give you a reliable enough account what they've done in the past and what they don't like about existing solutions to some problem. People rarely have precise ideas about what they do want. The few who have specific, positive ideas often struggle to articulate them. And you still have to a validate that people actually want what they say they want. This is the essence of [user research](https://en.wikipedia.org/wiki/User_Research).
 
 **Are the constraints on a solution essential?** You can waste a lot of time and energy on constraints that aren't [essential](https://en.wikipedia.org/wiki/Essential_complexity) to the problem, like poor tool choices.
 
 **Can someone with less knowledge/skill/talent than me solve this problem?** I prefer to focus on problems that strike a balance between ["the challenge of the task and the skill of the performer"]({% post_url 2021-02-14-optimal-experience %}).
 
 **Will someone else solve the problem if I don't?** There are many situations where you care more about the result than about the process of reaching it.
+
+**Can I solve this problem significantly better than other people have solved it?** Many existing solutions can be improved upon with the benefit of hindsight. You can often eliminate some of the mistakes, warts, and compromises that inevitably accumulate when a solution evolves incrementally. The important question is: how much improvement can you make? People will complain about the status quo but only dramatic improvements are likely to induce people to switch from a mature solution. Anything less than dramatic improvement is rarely worth the effort.
+
+If there are no existing solutions to the problem, ask yourself why. [Blue oceans](https://en.wikipedia.org/wiki/Blue_Ocean_Strategy) do exist, but they are rare. More often a dearth of solutions is a hint that a problem is not worth solving.
 
 **Are there other problems I should prioritize over this problem?** Considering [opportunity cost](https://en.wikipedia.org/wiki/Opportunity_cost), [urgency vs. importance](https://en.wikipedia.org/wiki/Time_management#Eisenhower_method), Return on Investment (ROI), and other criteria.
